[tool.poetry]
package-mode = false

[project]
name = "recommendation-engine"
version = "0.1.0"
description = ""
authors = [
    {name = "Louis Cronin",email = "louis.cronin@cyara.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "uvicorn[standard]>=0.32.0",
    "boto3 (>=1.42.37,<2.0.0)",
    "pydantic>=2.6.0",
     
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
